Removed stop animation button

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <button id="startOverButton" class="btn btn-danger">Restart</button>
                 <button id="playButton" class="btn btn-success">Play Animation</button>
                 <button id="downloadButton" class="btn btn-success">Download Animation List</button>
-                <button id="stopAnimation" class="btn-success">Stop Animation</button>
+                <!--<button id="stopAnimation" class="btn-success">Stop Animation</button>-->
             </div>
             <br>
             <br>
