--- a/index.html
+++ b/index.html
@@ -19,10 +19,28 @@
             const GRID_SIZE = 4;
             const ledStates = Array(16).fill(0); // Initialize LED states (0: white, 1: red)
             const frames = [];
+            const led_matrix = [
+                "0b01111000",
+                "0b01110100",
+                "0b01110010",
+                "0b01110001",
+                "0b10111000",
+                "0b10110100",
+                "0b10110010",
+                "0b10110001",
+                "0b11011000",
+                "0b11010100",
+                "0b11010010",
+                "0b11010001",
+                "0b11101000",
+                "0b11100100",
+                "0b11100010",
+                "0b11100001",
+              ];
             let currentFrame = 0;
             var setIntervalId = "";
             let playing = false;
-            const timeInterval = 50; // Time interval in milliseconds
+            let timeInterval = document.getElementById("intervalTime").value // Time interval in milliseconds
             drawLEDMatrix();
 
 
@@ -60,12 +78,13 @@
 
             function clearFrame() {
                 ledStates.fill(0);
+                drawLEDMatrix();
             }
 
             function duplicateFrame() {
                 saveFrame();
                 updateFrameCounter();
-    
+
             }
             function updateFrameCounter() {
                 document.getElementById("frameCounterHeading").innerHTML = "Frames: " + frames.length;
@@ -105,8 +124,20 @@
             }
 
             function downloadFrameList() {
-                const frameList = frames.map(frame => frame.map(led => `0b${led.toString(2).padStart(8, '0')}`).join(', ')).join(',\n');
-                const content = `const uint8_t animation[] = {\n${frameList}\n};`;
+              console.log("Frames:", frames);
+              const frameList = [];
+              for (let j=0; j < frames.length; j++){
+                console.log("Frame:", frames[j]);
+                  for (let i=0; i<16; i++){
+                    if (frames[j][i] === 1) {
+                        frameList.push(led_matrix[i]);
+                    } else {
+                      frameList.push("0b11110000");
+                    }
+                  }
+                }
+                formatted = frameList.join(",\n")
+                const content = `const uint8_t animation[] = {\n${formatted}};`;
 
                 const blob = new Blob([content], { type: "text/plain" });
                 const link = document.createElement("a");
@@ -130,6 +161,17 @@
                         drawLEDMatrix();
                     }
                 }
+            });
+            var intervalSlider = document.getElementById("intervalTime");
+            intervalSlider.addEventListener("input", function () {
+              timeInterval = intervalSlider.value;
+              var newHeading = "Time interval between frames: " + timeInterval + " ms";
+              document.getElementById("intervalTimeHeading").innerHTML = newHeading;
+              if (playing){
+                clearInterval(setIntervalId);
+                setIntervalId = setInterval(playFrames, timeInterval);
+              }
+
             });
 
             document.getElementById("saveButton").addEventListener("click", function () {
@@ -169,9 +211,15 @@
                 <button id="saveButton" class="btn btn-primary">Save Frame</button>
                 <button id="duplicateFrameButton" class="btn btn-primary">Duplicate Frame</button>
                 <button id="clearFrameButton" class="btn btn-warning">Clear Frame</button>
-            </div> 
+              </div>
+            <div class="mb-3">
+                  <input type="range" min="0" max="2000" value="2" step="10" class="slider" id="intervalTime">
+            </div>
+            <div class="mb33">
+                  <h3 id="intervalTimeHeading">Time Interval between frames: 0ms</h3>
+            </div>
             <br>
-            <div class="mb-3">   
+            <div class="mb-3">
                 <button id="startOverButton" class="btn btn-danger">Restart</button>
                 <button id="playButton" class="btn btn-success">Play Animation</button>
                 <button id="downloadButton" class="btn btn-success">Download Animation List</button>
